# speykious.dev

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: errors.rs  main.rs
backend/src/routes/: mod.rs
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  bindings
frontend/src/lib/assets/scss/: _variables.scss  anime.scss  debug.scss  navbar.scss  spey.scss
frontend/src/lib/components/navbar/: Menu.svelte  NavTab.svelte  NavTabs.svelte  Navbar.svelte  SpeykiousDev.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/anime/: +page.svelte
shared/: .gitignore  Cargo.toml
